lesson4/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-server
  namespace: flask-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-server
  template:
    metadata:
      labels:
        app: flask-server
    spec:
      containers:
      - name: flask-server
        image: dimrev/l4-flask-app:v0.0.5
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: logs-volume
          mountPath: /app/logs
      volumes:
      - name: logs-volume
        persistentVolumeClaim:
          claimName: flask-logs-pvc
